@@ -1,3 +1,5 @@
+  o Enable input widgets to (partially) display characters larger than
+    the input height.
   o Repair double clicking on a file in the file selector.
   o Pass the associated (XEvent * xev) to fl_handle_object on an FL_DRAW
     event, allowing an FL_FREE object to make use of this info to
