@@ -1,3 +1,8 @@
+2004-05-05  Angus Leeming  <angus.leeming@btopenworld.com>
+
+	* lib/xtext.c (fl_drw_string): enable the drawing of characters
+	in a font larger than the input widget.
+
 2004-05-06  Angus Leeming  <angus.leeming@btopenworld.com>
 
 	* fdesign/fd_spec.c: initialization of the FL_CHOICE component of
